--- a/webroot/css/src/main.scss
+++ b/webroot/css/src/main.scss
@@ -1,5 +1,1 @@
-@import "compass/reset";
-@import "compass/css3";
-
-@import "mixins";
-@import "style";
+@import "../../components/sass-bootstrap/lib/bootstrap";
